Fixed z-index

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
   border: 1px solid red;
   padding: 8px 15px;
   position: absolute;
+  z-index: 1;
 }
 
 .input-error::after {
